--- a/chat_service/pyproject.toml
+++ b/chat_service/pyproject.toml
@@ -6,9 +6,13 @@ authors = [
     {name = "DimaKrylovDev",email = "metiq2007@yandex.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "grpcio (>=1.75.1,<2.0.0)"
+    "grpcio (>=1.75.1,<2.0.0)",
+    "grpcio-tools (>=1.75.1,<2.0.0)",
+    "fastapi (>=0.119.0,<0.120.0)",
+    "pydantic (>=2.12.2,<3.0.0)",
+    "pydantic-settings (>=2.11.0,<3.0.0)"
 ]
 
 
